--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -105,7 +105,7 @@ PORTFOLIO
     <section id="education">
         <h2>Education</h2>
         <ul>
-            <li>MCA in Cloud Computing - Galgotias University (2026)</li>
+            <li>MCA in Cloud Computing - Galgotias University (2026) - 7.6 CGPA</li>
             <li>BCA - M.V College, VKSU (2023) - 69%</li>
             <li>12th - M.V College, Bihar Board (2018) - 61%</li>
             <li>10th - Harihar Singh Academy, CBSE (2016) - 10 CGPA</li>
