--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -1,3 +1,11 @@
+<section id="profile" style="text-align:center; margin-top:20px;">
+    <h2>Profile</h2>
+    <img src="profile.jpg" alt="Kshitij Kumar Singh" 
+         style="width:180px;height:180px;border-radius:50%;box-shadow:0px 4px 10px rgba(0,0,0,0.2);margin-bottom:10px;">
+    <h3>Kshitij Kumar Singh</h3>
+    <p>Aspiring Cloud Computing Professional | MCA Student at Galgotias University</p>
+</section>
+
 <section id="about">
     <h2>About Me</h2>
     <p>To be a part of an organization where I can utilize my knowledge, skills, and dedication to contribute meaningfully to its growth while continuously improving myself professionally.</p>
