--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -1,6 +1,6 @@
 <section id="profile" style="text-align:center; margin-top:20px;">
     <h2>Profile</h2>
-    <img src="profile.jpg" alt="Kshitij Kumar Singh" 
+    <img src="Unknown-2.jpeg" alt="Kshitij Kumar Singh" 
          style="width:180px;height:180px;border-radius:50%;box-shadow:0px 4px 10px rgba(0,0,0,0.2);margin-bottom:10px;">
     <h3>Kshitij Kumar Singh</h3>
     <p>Aspiring Cloud Computing Professional | MCA Student at Galgotias University</p>
